[Changes 1.2.2]

* Use the same format in /DCC LIST for all waiting offers and tweak
  the DCC_BAR_TYPE 1 format to show DCC state. (caf)

* Correctly show time since offer for DCC CHAT offers in /DCC LIST. (caf)

* Improve completion bar for /SET DCC_BAR_TYPE 1 so that it always matches
  the completion percentage. (caf)

* Correctly align formatting of /DCC LIST line for /SET DCC_BAR_TYPE 1. (caf)

* Act on channel mode lock as half-op. (caf)

* Fix crash and memory leak in $aliasctl(COMMAND MATCH). (caf)

* Fix memory leaks in /CDCC PLIST and /CDCC NOTICE. (caf) 

* Rename reserved identifiers from irc_std.h to fix building on under
  latest cygwin. (caf)

* Ensure /BAN /DBAN /MB /MK /MUB /UNBAN commands send command to the right
  server. (caf)

* Fix "implied" operators (eg. += ) under NEW_MATH. (caf)

* Add /SCANB command to scan for users on the userlist with the BOT flag. (caf)

* Wire up /FSET WHOIS_BOT for users on the userlist with the BOT flag. (caf)

* Use /FSET RELSN to format /RELSN relayed messages instead of
  /FSET SEND_NOTICE. (caf)

* Change formatting of /FSETs SERVER_NOTICE_KLINE and SERVER_NOTICE_GLINE
  to show the ban type, and improve formatting of SERVER_NOTICE_CLIENT_CONNECT
  and SERVER_NOTICE_CLIENT_EXIT. (caf)

* Clean up handling of oper server notices, including removing some
  obsolete notice types (eg "high-traffic mode"). (caf)

* Unify handling of SWATCH NONE between OperView and non-OperView. (caf)

* Don't double-up server notices in the /RELS list. (caf)

* Don't fire the SERVER_NOTICE hook more than once per notice. (caf)

* Fix display of the OperView SWATCH flags variable. (caf)

* Update default /fset SERVER_NOTICE value to remove extra space. (caf)

* Treat all NOTICEs before registration as local server notices. (caf)

* Add /on NOTICE_GROUP and /fset NOTICE_GROUP analogous to MSG_GROUP. (caf)

* Add configure check for <sys/sockio.h>. (caf)

* Improve /WINDOW DESCRIBE output a little. (caf)
